Avanzamento sviluppi searchEservices
