# src/main/java/it/pagopa/interop/probing/eservice/operations/mapstruct/mapper/MapStructMapper.java
@@ -1,6 +1,5 @@
 package it.pagopa.interop.probing.eservice.operations.mapstruct.mapper;
 
-import java.util.List;
 import java.util.UUID;
 
 import org.mapstruct.Mapper;
@@ -9,11 +8,13 @@ import org.mapstruct.Mapping;
 import it.pagopa.interop.probing.eservice.operations.dtos.ChangeEserviceStateRequest;
 import it.pagopa.interop.probing.eservice.operations.dtos.ChangeProbingFrequencyRequest;
 import it.pagopa.interop.probing.eservice.operations.dtos.ChangeProbingStateRequest;
+import it.pagopa.interop.probing.eservice.operations.dtos.EserviceStateFE;
 import it.pagopa.interop.probing.eservice.operations.dtos.EserviceViewDTO;
 import it.pagopa.interop.probing.eservice.operations.mapstruct.dto.UpdateEserviceFrequencyDto;
 import it.pagopa.interop.probing.eservice.operations.mapstruct.dto.UpdateEserviceProbingStateDto;
 import it.pagopa.interop.probing.eservice.operations.mapstruct.dto.UpdateEserviceStateDto;
 import it.pagopa.interop.probing.eservice.operations.model.view.EserviceView;
+import it.pagopa.interop.probing.eservice.operations.util.EnumUtilities;
 
 @Mapper(componentModel = "spring")
 public interface MapStructMapper {
@@ -24,12 +25,18 @@ public interface MapStructMapper {
 
 	UpdateEserviceProbingStateDto toUpdateEserviceProbingStateDto(UUID eserviceId, UUID versionId,
 			ChangeProbingStateRequest changeProbingStateRequest);
-	
+
 	@Mapping(source = "changeProbingFrequencyRequest.frequency", target = "newPollingFrequency")
 	@Mapping(source = "changeProbingFrequencyRequest.startTime", target = "newPollingStartTime")
 	@Mapping(source = "changeProbingFrequencyRequest.endTime", target = "newPollingEndTime")
 	UpdateEserviceFrequencyDto toUpdateEserviceFrequencyDto(UUID eserviceId, UUID versionId,
 			ChangeProbingFrequencyRequest changeProbingFrequencyRequest);
 
-	List<EserviceViewDTO> toSearchEserviceResponse(List<EserviceView> eserviceViewEntity);
+	@Mapping(target = "state", expression = "java(mapStatus(eserviceViewEntity))")
+	EserviceViewDTO toSearchEserviceResponse(EserviceView eserviceViewEntity);
+
+	default EserviceStateFE mapStatus(EserviceView eserviceViewEntity) {
+		return EnumUtilities.fromBEtoFEState(eserviceViewEntity);
+	}
+
 }
