# src/main/java/it/pagopa/interop/probing/eservice/operations/model/view/EserviceView.java
@@ -3,7 +3,6 @@ package it.pagopa.interop.probing.eservice.operations.model.view;
 import java.io.Serializable;
 import java.time.OffsetDateTime;
 import java.util.UUID;
-
 import javax.persistence.Column;
 import javax.persistence.Entity;
 import javax.persistence.EnumType;
@@ -13,10 +12,8 @@ import javax.persistence.Table;
 import javax.validation.constraints.NotBlank;
 import javax.validation.constraints.NotNull;
 import javax.validation.constraints.Size;
-
 import org.hibernate.annotations.Immutable;
-
-import it.pagopa.interop.probing.eservice.operations.dtos.EserviceState;
+import it.pagopa.interop.probing.eservice.operations.dtos.EserviceStateBE;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
@@ -31,44 +28,47 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor
 public class EserviceView implements Serializable {
 
-	@Id
-	@Column(name = "id", updatable = false)
-	private Long id;
+  @Id
+  @Column(name = "id", updatable = false)
+  private Long id;
 
-	@NotBlank
-	@Size(max = 255)
-	@Column(name = "eservice_name")
-	private String eserviceName;
+  @NotBlank
+  @Size(max = 255)
+  @Column(name = "eservice_name")
+  private String eserviceName;
 
-	@NotNull
-	@Column(name = "eservice_id")
-	private UUID eserviceId;
+  @NotNull
+  @Column(name = "eservice_id")
+  private UUID eserviceId;
 
-	@NotBlank
-	@Size(max = 255)
-	@Column(name = "producer_name")
-	private String producerName;
+  @NotBlank
+  @Size(max = 255)
+  @Column(name = "producer_name")
+  private String producerName;
 
-	@NotNull
-	@Column(name = "probing_enabled")
-	private boolean probingEnabled;
+  @NotNull
+  @Column(name = "probing_enabled")
+  private boolean probingEnabled;
 
-	@NotNull
-	@Enumerated(EnumType.STRING)
-	@Column(name = "state")
-	private EserviceState state;
+  @NotNull
+  @Enumerated(EnumType.STRING)
+  @Column(name = "state")
+  private EserviceStateBE state;
 
-	@NotNull
-	@Column(name = "version_id")
-	private UUID versionId;
+  @NotNull
+  @Column(name = "version_id")
+  private UUID versionId;
 
-	@Column(name = "version_number")
-	private Integer versionNumber;
+  @Column(name = "version_number")
+  private Integer versionNumber;
 
-	@Column(name = "response_received")
-	private OffsetDateTime responseReceived;
+  @Column(name = "response_received", columnDefinition = "timestamp with time zone")
+  private OffsetDateTime responseReceived;
 
-	@Column(name = "last_request")
-	private OffsetDateTime lastRequest;
+  @Column(name = "last_request", columnDefinition = "timestamp with time zone")
+  private OffsetDateTime lastRequest;
+
+  @Column(name = "polling_frequency")
+  private Integer pollingFrequency;
 
 }
